syntax = "proto3";

option csharp_namespace = "Proto.Services";
package proto.services.pingpong;

service PingPongService {
  rpc GetServerTime (ClientTimeRequest) returns (ServerTimeResponse);
  
  rpc PingStream (PingRequest) returns (stream PingMessage);
  rpc BidirectionalPingStream (stream PingMessage) returns (stream PingMessage);
}

message ClientTimeRequest {
  int64 client_epoch_time = 1;
}

message ServerTimeResponse {
  int64 server_epoch_time = 1;
}

message PingRequest {
  string client_id = 1;
}

message PingMessage {
  string message = 1;
  int64 timestamp = 2;
}
